--- a/fundamentos-desenvolvimento-frontend/html-project/style.css
+++ b/fundamentos-desenvolvimento-frontend/html-project/style.css
@@ -12,3 +12,16 @@ header div {
     margin-right: 1rem;
     margin-left: 1rem;
 }
+
+.lista-tecnologias{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.lista-tecnologias img {
+    width: 10rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
