--- a/fundamentos-desenvolvimento-frontend/html-project/style.css
+++ b/fundamentos-desenvolvimento-frontend/html-project/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Courier New'
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -24,6 +28,12 @@ header div {
     width: 10rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    padding: 2px
+}
+
+.lista-tecnologias img:hover{
+    padding: 0px;
+    border: 2px black solid;
 }
 
 footer #redes{
@@ -41,4 +51,13 @@ footer {
 footer a {
     display: block;
     padding-top: 10px;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline
+}
+
+.destaque {
+    background-color: grey;
 }
