Aula 01: Troca layout da tela de login para ScrollView.

--- a/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_login.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_login.xml
@@ -1,45 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tela de Acesso"
-        android:textSize="20dp"
-        android:textAlignment="center"/>
+        android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="E-mail de acesso"
-        android:inputType="textEmailAddress"
-        android:layout_margin="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tela de Acesso"
+            android:textSize="20dp"
+            android:textAlignment="center"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Senha de Acesso"
-        android:layout_marginHorizontal="20dp"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="E-mail de acesso"
+            android:inputType="textEmailAddress"
+            android:layout_margin="20dp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:backgroundTint="@color/blue"
-        android:text="ENTRAR"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Senha de Acesso"
+            android:layout_marginHorizontal="20dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Não tem conta? Clique aqui"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:layout_marginHorizontal="20dp"
-        android:textAlignment="center"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:backgroundTint="@color/blue"
+            android:text="ENTRAR"/>
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Não tem conta? Clique aqui"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginHorizontal="20dp"
+            android:textAlignment="center"/>
+
+    </LinearLayout>
+
+
+
+</ScrollView>
