--- a/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_login.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -18,6 +19,7 @@
             android:textAlignment="center"/>
 
         <EditText
+            android:id="@+id/editEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="E-mail de acesso"
@@ -25,6 +27,7 @@
             android:layout_margin="20dp"/>
 
         <EditText
+            android:id="@+id/editSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -32,6 +35,7 @@
             android:layout_marginHorizontal="20dp"/>
 
         <Button
+            android:id="@+id/btnEntrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
