--- a/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/values/colors.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="blue">#2371A5</color>
+
+    <color name="gray">#575757</color>
+    <color name="lgray">#BFBFBF</color>
 </resources>
