--- a/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_principal.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_principal.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:paddingVertical="5dp"
             android:background="@color/lgray">
 
             <HorizontalScrollView
@@ -149,6 +150,23 @@
                 android:textColor="@color/white"
                 android:textSize="20dp" />
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="BEM VINDO"
+            android:textStyle="bold"
+            android:textSize="22dp" />
+
+        <TextView
+            android:id="@+id/textEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="otavio@mb"
+            android:textStyle="bold"
+            android:textSize="22dp" />
 
     </LinearLayout>
 </ScrollView>
