--- a/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_login.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/res/layout/activity_login.xml
@@ -34,13 +34,31 @@
             android:hint="Senha de Acesso"
             android:layout_marginHorizontal="20dp"/>
 
-        <Button
-            android:id="@+id/btnEntrar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:backgroundTint="@color/blue"
-            android:text="ENTRAR"/>
+            android:orientation="horizontal"
+            android:weightSum="100">
+
+            <Button
+                android:id="@+id/btnEntrar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/blue"
+                android:text="ENTRAR"
+                android:layout_weight="50"/>
+
+            <Button
+                android:id="@+id/btnSair"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/gray"
+                android:text="SAIR"
+                android:layout_weight="50"/>
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
