--- a/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/res/values/colors.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="blue">#2371A5</color>
+
+    <color name="gray">#575757</color>
+    <color name="lgray">#BFBFBF</color>
 </resources>
