--- a/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/res/layout/activity_login.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,13 @@
             android:hint="Senha de Acesso"
             android:layout_marginHorizontal="20dp"/>
 
+        <Switch
+            android:id="@+id/switchLembrarSenha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lembrar Senha"
+            android:textAlignment="textEnd" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
